# TP_Task1_C-

./: .travis.yml  CMakeLists.txt  Makefile  README.md  expected.txt  file_creation.c  file_creation.h  test_data.txt
include/form/: file_creation.h  form_sorter.h
linters/: run.sh
project/include/: form_sorter.h
project/source/: file_creation.c  form_sorter.c  main.c
src/: file_creation.c  form_sorter.c  main.c
test/: CMakeLists.txt  test_1_write_add.cpp  test_2_read.cpp  test_3_sort.cpp  test_read.cpp
